Fix color contrast

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -10,3 +10,4 @@ $bg-app-grey: #E9E9E9;
 $bg-app-white: #FFFFFF;
 
 $typo-primary-color: black;
+$typo-primary-contrast-color: white;
